--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,11 +18,15 @@
     "@babel/node": "^7.6.1",
     "@babel/preset-env": "^7.6.0",
     "babel-loader": "^8.0.6",
+    "babel-minify-webpack-plugin": "^0.3.1",
+    "ts-loader": "^6.1.0",
+    "typescript": "^3.6.3",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8"
   },
   "dependencies": {
     "concurrently": "^4.1.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io-client": "^2.2.0"
   }
 }
