--- a/package.json
+++ b/package.json
@@ -14,9 +14,5 @@
   ],
   "author": "gcharis",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/cli": "^7.6.0",
-    "@babel/core": "^7.6.0",
-    "lerna": "^3.16.4"
-  }
+  "devDependencies": {}
 }
