--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,8 +23,8 @@
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
-    "@nestjs/platform-socket.io": "^6.6.7",
-    "@nestjs/websockets": "^6.6.7",
+    "@nestjs/platform-socket.io": "^6.8.2",
+    "@nestjs/websockets": "^6.8.2",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3"
@@ -34,6 +34,7 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
+    "@types/socket.io": "^2.1.3",
     "@types/supertest": "^2.0.7",
     "jest": "^25.0.0",
     "nodemon": "^1.18.9",
