--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -25,10 +25,15 @@
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/platform-socket.io": "^6.8.2",
     "@nestjs/websockets": "^6.8.2",
+    "@types/dialogflow": "^0.11.0",
+    "@types/dotenv": "^6.1.1",
+    "@types/uuid": "^3.4.5",
+    "dialogflow": "^0.12.0",
     "dotenv": "^8.1.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
